--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,11 @@ build-std = ["core", "compiler_builtins"]
 build-std-features = ["panic_immediate_abort"]
 panic = "abort"
 
-[target.aarch64-unknown-none]
+[target.aarch64]
+linker = "/opt/homebrew/opt/llvm/bin/ld.lld"
+rustflags = ["-C", "link-arg=--script=layout.ld"]
+
+[target.x86_64]
 linker = "/opt/homebrew/opt/llvm/bin/ld.lld"
 rustflags = ["-C", "link-arg=--script=layout.ld"]
 
