--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2024"
 [build]
 target = "targets/aarch64-unknown-none.json"
 
+[dependencies]
+
 [unstable]
 build-std = ["core", "compiler_builtins"]
 build-std-features = ["panic_immediate_abort"]
