--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,13 @@ target = "targets/aarch64-unknown-none.json"
 build-std = ["core", "compiler_builtins"]
 build-std-features = ["panic_immediate_abort"]
 panic = "abort"
+codegen-units = 1
+
+[profile.release]
+codegen-units = 1
+
+[profile.dev]
+codegen-units = 1
 
 [target.aarch64]
 linker = "/opt/homebrew/opt/llvm/bin/ld.lld"
