Added UART Print

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2024"
 target = "targets/aarch64-unknown-none.json"
 
 [dependencies]
+spin = "0.10.0"
+uart = "3.0.1"
 
 [unstable]
 build-std = ["core", "compiler_builtins"]
